# local-fonts-agent

./: README.md
.github/workflow/: pr.yaml  publish.yaml
.github/workflows/: build-tauri.yaml  pr.yaml  publish.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  fonts.rs  lib.rs  logging.rs  main.rs  menu.rs  server.rs
